--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,12 @@ before_install:
 
 
 script:
-- sfdx force:org:create -v HubOrg -s -f config/project-scratch-def.json -a ciorg --wait
+#- sfdx force:org:create -v HubOrg -s -f config/project-scratch-def.json -a ciorg --wait
   2
-- sfdx force:org:display -u ciorg
-- sfdx force:source:push -u ciorg
-- sfdx force:apex:test:run -u ciorg --wait 10
-- sfdx force:org:delete -u ciorg -p
+#- sfdx force:org:display -u ciorg
+#- sfdx force:source:push -u ciorg
+#- sfdx force:apex:test:run -u ciorg --wait 10
+#- sfdx force:org:delete -u ciorg -p
 #Authorize target deployment org
 - sfdx force:auth:jwt:grant --instanceurl https://login.salesforce.com  --clientid $CONSUMERKEY --jwtkeyfile assets/server.key --username $USERNAME --setalias UAT
   #Deploy to target deployment org and run unit tests
